Got basic config fueled transitions working. Now I will need to implement a pause scene, and replace all user facing instances of c style strings with cpp strings.

--- a/data/config/FX.ini
+++ b/data/config/FX.ini
@@ -23,3 +23,58 @@ StartTime        = 0.0
 EndTime          = 1.0
 StartValue       = 0.0
 EndValue         = 90.0
+
+; Scene Transition FX
+
+[FX-ScrollLeft]
+SlotList        = @
+Type            = position
+Curve           = smooth
+StartTime       = 0
+EndTime         = 0.5
+StartValue      = (0, 0)
+EndValue        = (-1920, 0)
+
+[FX-ScrollRight@FX-ScrollLeft]
+EndValue        = (1920, 0)
+
+[FXS-FadeIn]
+Type            = alpha
+Curve           = smooth
+StartValue      = 0
+EndValue        = 1
+StartTime       = 0
+EndTime         = 0.4
+
+[FXS-FadeOut@FXS-FadeIn]
+EndValue        = -1
+StartTime       = 0.6
+EndTime         = 1
+
+[FX-SpiraleOutFX]
+SlotList        = FXS-ScaleDown # FXS-RotateCCW
+
+[FX-SpiraleInFX]
+SlotList        = FXS-ScaleUp # FXS-RotateCW
+
+[FXS-ScaleDown]
+Type            = Scale
+Curve           = linear
+StartTime       = 0
+EndTime         = 0.5
+StartValue      = 1
+EndValue        = 0.00001
+
+[FXS-RotateCCW]
+Type            = Rotation
+Curve           = linear
+StartTime       = 0
+EndTime         = 0.5
+StartValue      = 0
+EndValue        = -1080
+
+[FXS-ScaleUp@FXS-ScaleDown]
+EndValue        = 100000
+
+[FXS-RotateCW@FXS-RotateCCW]
+EndValue        = 1080
