--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -1,6 +1,5 @@
 ; Includes
 
-@../data/config/Arena.ini@
 @../data/config/Crosshairs.ini@
 @../data/config/FX.ini@
 @../data/config/Geometry.ini@
@@ -30,9 +29,9 @@ ShowProfiler      = false
 ScreenWidth     = @MainCamera.FrustumWidth
 ScreenHeight    = @MainCamera.FrustumHeight
 Title             = Hexpatriates
-VSync             = true
-Smoothing         = true
 FullScreen        = true
+Smoothing         = true
+VSync             = true
 
 [Physics]
 AllowSleep      = false
@@ -83,14 +82,12 @@ JOY_B_2           = SuperP2
  
 [MainViewport]
 Camera            = MainCamera
-BackgroundColor   = (0, 0, 0)
  
 [MainCamera]
 FrustumWidth      = 1920
 FrustumHeight     = 1080
 FrustumFar        = 1.0
-FrustumNear       = 0.0
-Position          = (0.0, 0.0, -1.0)
+GroupList         = default # fade ; Groups (of objects) will be rendered in the order of declaration. Up to 16 groups can be associated with a camera. Defaults to "default" group.
 
 ; Joints
 
