--- a/data/config/Scene.ini
+++ b/data/config/Scene.ini
@@ -2,70 +2,290 @@
 Pivot           = center
 Size            = (1920, 1080, 1)
 TrackList       = TT-StoreScene
-;Data
-Transitions     = O-ToSceneRed # O-ToSceneYellow # O-ToSceneGreen # O-ToSceneCyan # O-ToSceneBlue
+
+; MAIN MENU
 
 [O-SceneMain@O-Scene]
-ChildList       = O-MainMenu
+Graphic       = G-SceneMain
+ChildList     = O-ArcadeText # O-VersusText # O-OnlinePlayText # O-TrainingText # O-SettingsText
 
-[TT-StoreScene]
-0               = Set Runtime O-Scene ^
+[G-SceneMain]
+Texture       = SpaceShooterRedux/Backgrounds/darkPurple.png
 
-[TT-SetColor]
-0               = > Object.GetOwner ^, > Object.GetName <, > Get < HSLTint, Object.SetHSL ^ <
+[O-SceneMainText@ScrollObject]
+Scale             = (5, 5, 1)
+UseParentSpace    = position
 
-[O-SceneRed@O-Scene]
+[G-SceneMainText]
+Pivot             = left
+
+[O-ArcadeText@O-SceneMainText]
+Graphic           = G-ArcadeText
+Position          = (-0.45, 0.05, -0.1)
+ShaderList        = SH-OutlineText
+
+[G-ArcadeText@G-SceneMainText]
+Text              = T-ArcadeText
+
+[T-ArcadeText]
+String            = Arcade
+
+[O-VersusText@O-SceneMainText]
+Graphic           = G-VersusText
+Position          = (-0.45, 0.15, -0.1)
+
+[G-VersusText@G-SceneMainText]
+Text              = T-VersusText
+
+[T-VersusText]
+String            = VS
+
+[O-OnlinePlayText@O-SceneMainText]
+Graphic           = G-OnlinePlayText
+Position          = (-0.45, 0.25, -0.1)
+
+[G-OnlinePlayText@G-SceneMainText]
+Text              = T-OnlinePlayText
+
+[T-OnlinePlayText]
+String            = Online Play
+
+[O-TrainingText@O-SceneMainText]
+Graphic           = G-TrainingText
+Position          = (-0.45, 0.35, -0.1)
+
+[G-TrainingText@G-SceneMainText]
+Text              = T-TrainingText
+
+[T-TrainingText]
+String            = Training
+
+[O-SettingsText@O-SceneMainText]
+Graphic           = G-SettingsText
+Position          = (-0.45, 0.45, -0.1)
+
+[G-SettingsText@G-SceneMainText]
+Text              = T-SettingsText
+
+[T-SettingsText]
+String            = Settings
+
+; PILOT SELECT MENU
+
+[O-ScenePilotSelect@O-Scene]
+Graphic       = G-ScenePilotSelect
+ChildList     = O-PilotSelectIcon1 # O-PilotSelectIcon2 # O-PilotSelectIcon3 # O-PilotSelectIcon4 # O-PilotSelectIcon5 # O-PilotSelectIcon6 # O-PilotSelectIcon7 # O-PilotSelectIcon8
+
+[G-ScenePilotSelect]
+Texture       = SpaceShooterRedux/Backgrounds/purple.png
+
+; ARENA
+
+[O-SceneArena@O-Scene]
+ChildList     = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2 # O-TimerText
 ;Data
-HSLTint         = (0, 0.95, 0.55)
+PilotP1       = O-Pilot1P1
+PilotP2       = O-Pilot1P2
 
-[O-SceneYellow@O-Scene]
-;Data
-HSLTint         = (0.17, 0.95, 0.55)
+[O-DashMeter@O-UI]
+Scale             = (0.072, 0.0375, 1.0)
 
-[O-SceneGreen@O-Scene]
-;Data
-HSLTint         = (0.33, 0.95, 0.55)
+[G-DashMeter]
+Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
-[O-SceneCyan@O-Scene]
-;Data
-HSLTint         = (0.5, 0.95, 0.55)
+[O-DashMeterP1@O-DashMeter]
+Graphic           = G-DashMeterP1
+Position          = (-0.05, -0.475, 1.0)
 
-[O-SceneBlue@O-Scene]
-;Data
-HSLTint         = (0.66, 0.95, 0.55)
+[G-DashMeterP1@G-DashMeter]
+Pivot             = right
+
+[O-DashMeterP2@O-DashMeter]
+Graphic           = G-DashMeterP2
+Position          = (0.05, -0.475, 1.0)
+
+[G-DashMeterP2@G-DashMeter]
+Pivot             = left
+
+[O-ParryMeter@O-UI]
+Scale             = (0.072, 0.0375, 1.0)
+
+[G-ParryMeter]
+Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+[O-ParryMeterP1@O-ParryMeter]
+Graphic           = G-ParryMeterP1
+Position          = (-0.1445, -0.475, 1.0)
+
+[G-ParryMeterP1@G-ParryMeter]
+Pivot             = right
+
+[O-ParryMeterP2@O-ParryMeter]
+Graphic           = G-ParryMeterP2
+Position          = (0.1445, -0.475, 1.0)
+
+[G-ParryMeterP2@G-ParryMeter]
+Pivot             = left
+
+[O-LivesMeter@O-UI]
+Scale             = (0.072, 0.025, 1.0)
+
+[G-LivesMeter]
+Texture           = SpaceShooterRedux/PNG/UI/buttonRed.png
+
+[O-LivesMeterP1@O-LivesMeter]
+Graphic           = G-LivesMeterP1
+Position          = (-0.05, -0.39375, 1.0)
+
+[G-LivesMeterP1@G-LivesMeter]
+Pivot             = right
+
+[O-LivesMeterP2@O-LivesMeter]
+Graphic           = G-LivesMeterP2
+Position          = (0.05, -0.39375, 1.0)
+
+[G-LivesMeterP2@G-LivesMeter]
+Pivot             = left
+
+[O-NeutralMeter@O-UI]
+Scale             = (0.072, 0.0375, 1.0)
+
+[G-NeutralMeter]
+Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+[O-NeutralMeterP1@O-NeutralMeter]
+Graphic           = G-NeutralMeterP1
+Position          = (-0.239, -0.475, 1.0)
+
+[G-NeutralMeterP1@G-NeutralMeter]
+Pivot             = right
+
+[O-NeutralMeterP2@O-NeutralMeter]
+Graphic           = G-NeutralMeterP2
+Position          = (0.239, -0.475, 1.0)
+
+[G-NeutralMeterP2@G-NeutralMeter]
+Pivot             = left
+
+[O-UpwardMeter@O-UI]
+Scale             = (0.072, 0.0375, 1.0)
+
+[G-UpwardMeter]
+Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+[O-UpwardMeterP1@O-UpwardMeter]
+Graphic           = G-UpwardMeterP1
+Position          = (-0.3335, -0.475, 1.0)
+
+[G-UpwardMeterP1@G-UpwardMeter]
+Pivot             = right
+
+[O-UpwardMeterP2@O-UpwardMeter]
+Graphic           = G-UpwardMeterP2
+Position          = (0.3335, -0.475, 1.0)
+
+[G-UpwardMeterP2@G-UpwardMeter]
+Pivot             = left
+
+[O-DownwardMeter@O-UI]
+Scale             = (0.072, 0.0375, 1.0)
+
+[G-DownwardMeter]
+Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+[O-DownwardMeterP1@O-DownwardMeter]
+Graphic           = G-DownwardMeterP1
+Position          = (-0.428, -0.475, 1.0)
+
+[G-DownwardMeterP1@G-DownwardMeter]
+Pivot             = right
+
+[O-DownwardMeterP2@O-DownwardMeter]
+Graphic           = G-DownwardMeterP2
+Position          = (0.428, -0.475, 1.0)
+
+[G-DownwardMeterP2@G-DownwardMeter]
+Pivot             = left
+
+[O-SuperMeter@O-UI]
+Scale             = (0.45, 0.0375, 1.0)
+
+[G-SuperMeter]
+Texture           = SpaceShooterRedux/PNG/UI/buttonYellow.png
+
+[O-SuperMeterP1@O-SuperMeter]
+Graphic           = G-SuperMeterP1
+Position          = (-0.05, -0.43125, 1.0)
+
+[G-SuperMeterP1@G-SuperMeter]
+Pivot             = right
+
+[O-SuperMeterP2@O-SuperMeter]
+Graphic           = G-SuperMeterP2
+Position          = (0.05, -0.43125, 1.0)
+
+[G-SuperMeterP2@G-SuperMeter]
+Pivot             = left
+
+[O-ClipBorder@O-UI]
+Graphic           = G-ClipBorder
+Scale             = (0.002, 0.0375, 1.0)
+
+[G-ClipBorder]
+Texture           = SpaceShooterRedux/PNG/UI/buttonRed.png
+Pivot             = center
+Color             = (255, 0, 0)
+
+[O-ClipBorderTop@O-ClipBorder]
+Scale             = (0.072, 0.002, 1.0)
+Pivot             = top
+
+[O-ClipBorderLeft@O-ClipBorder]
+Pivot             = left
+
+[O-ClipBorderBottom@O-ClipBorder]
+Scale             = @O-ClipBorderTop.Scale
+Pivot             = bottom
+
+[O-ClipBorderRight@O-ClipBorder]
+Pivot             = right
+
+[O-TimerText@O-UI]
+Graphic           = G-TimerText
+Position          = (0, -0.4375, 0)
+Scale             = (0.08, 0.08, 0.08)
+
+[G-TimerText]
+Text              = T-TimerText
+Pivot             = center
+
+[T-TimerText]
+String            = 90
+
+; TRANSITIONS
 
 [O-ToScene]
 LifeTime        = track
 TrackList       = @
 
-[O-ToSceneRed@O-ToScene]
-0               = > Get Runtime O-Scene, Object.Delete <, Object.Create O-SceneRed
+[O-ToSceneMain@O-ToScene]
+0               = > Get Runtime O-Scene, Object.Delete <, Object.Create O-SceneMain
 
-[O-ToSceneYellow@O-ToScene]
-0               = > Get Runtime O-Scene, Object.AddTrack < TT-MoveOut, > Object.Create O-SceneYellow, Object.AddTrack < TT-MoveIn
+[O-ToScenePilotSelect@O-ToScene]
+0               = > Get Runtime O-Scene, Object.Delete <, Object.Create O-ScenePilotSelect
 
-[TT-MoveOut]
-0               = Object.SetLifeTime ^ fx, Object.AddFX ^ FX-ScrollLeft
+[O-ToSceneArena@O-ToScene]
+0               = > Get Runtime O-Scene, Object.Delete <, Object.Create O-SceneArena
 
-[TT-MoveIn]
-0               = Object.SetPosition ^ (-1280, 0)
-0.6             = Object.AddFX ^ FX-ScrollRight
+;[O-ToSceneMain@O-ToScene]
+;0               = > Get Runtime O-Scene, Object.Delete <, Object.Create O-SceneMain
 
-[FX-ScrollLeft]
-SlotList        = @
-Type            = position
-Curve           = smooth
-StartTime       = 0
-EndTime         = 0.5
-StartValue      = (0, 0)
-EndValue        = (-1280, 0)
+;[O-ToScenePilotSelect@O-ToScene]
+;0               = > Get Runtime O-Scene, Object.AddTrack < TT-MoveOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-MoveIn
 
-[FX-ScrollRight@FX-ScrollLeft]
-EndValue        = (1280, 0)
-
-[O-ToSceneGreen@O-ToScene]
-0               = Object.Create O-Fade
-0.5             = > Get Runtime O-Scene, Object.Delete <, > Object.Create O-SceneGreen
+;[O-ToSceneArena@O-ToScene]
+;0               = Object.Create O-Fade
+;0.5             = > Get Runtime O-Scene, Object.Delete <, > Object.Create O-SceneArena
 
 [O-Fade]
 Group           = fade
@@ -81,60 +301,12 @@ Alpha           = 0
 FXList          = @
 SlotList        = FXS-FadeIn # FXS-FadeOut
 
-[FXS-FadeIn]
-Type            = alpha
-Curve           = smooth
-StartValue      = 0
-EndValue        = 1
-StartTime       = 0
-EndTime         = 0.4
-
-[FXS-FadeOut@FXS-FadeIn]
-EndValue        = -1
-StartTime       = 0.6
-EndTime         = 1
-
-[O-ToSceneCyan@ToScene]
-0               = > Get Runtime O-Scene, Object.AddTrack < TT-SpiraleOutTrack, > Object.Create O-SceneCyan, Object.AddTrack < TT-SpiraleInTrack
-
-[TT-SpiraleOutTrack]
-0               = Object.SetLifeTime ^ fx, Object.AddFX ^ FX-SpiraleOutFX
-
-[FX-SpiraleOutFX]
-SlotList        = FXS-ScaleDown # FXS-RotateCCW
-
-[TT-SpiraleInTrack]
-0               = Object.SetScale ^ 0.00001
-1.2             = Object.AddFX ^ FX-SpiraleInFX
-
-[FX-SpiraleInFX]
-SlotList        = FXS-ScaleUp # FXS-RotateCW
-
-[FXS-ScaleDown]
-Type            = Scale
-Curve           = linear
-StartTime       = 0
-EndTime         = 0.5
-StartValue      = 1
-EndValue        = 0.00001
-
-[FXS-RotateCCW]
-Type            = Rotation
-Curve           = linear
-StartTime       = 0
-EndTime         = 0.5
-StartValue      = 0
-EndValue        = -720
-
-[FXS-ScaleUp@FXS-ScaleDown]
-EndValue        = 100000
-
-[FXS-RotateCW@FXS-RotateCCW]
-EndValue        = 720
+[O-ToSceneCyan@O-ToScene]
+0               = > Get Runtime O-Scene, Object.AddTrack < TT-SpiralOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-SpiralIn
 
 [O-ToSceneBlue@O-ToScene]
 0               = >> Get Runtime O-Scene, Set Runtime Out <, Object.SetPosition < (0, 0, 200) #
-                  >  Object.Create O-SceneBlue, Object.SetPosition < (0, 0, 100) #
+                  >  Object.Create O-ScenePilotSelect, Object.SetPosition < (0, 0, 100) #
                   >  Viewport.Get MainViewport, Viewport.Delete <, Viewport.Create V-ViewportIn, Viewport.Create V-ViewportOut, Viewport.Create MainViewport #
                   >  Object.Create O-SceneDissolve, Object.SetOwner < ^
 0.8             = >  Viewport.Get V-ViewportIn, Viewport.Delete <, > Viewport.Get V-ViewportOut, Viewport.Delete < #
