--- a/data/config/TimelineTrack.ini
+++ b/data/config/TimelineTrack.ini
@@ -6,3 +6,22 @@
 0.30 = Object.RemoveShader ^ SH-ColorWhite
 0.40 = Object.AddShader ^ SH-ColorWhite
 0.50 = Object.RemoveShader ^ SH-ColorWhite
+
+; Scene Tracks
+
+[TT-StoreScene]
+0               = Set Runtime O-Scene ^
+
+[TT-MoveOut]
+0               = Object.SetLifeTime ^ fx, Object.AddFX ^ FX-ScrollLeft
+
+[TT-MoveIn]
+0               = Object.SetPosition ^ (-1920, 0)
+0.6             = Object.AddFX ^ FX-ScrollRight
+
+[TT-SpiralOut]
+0               = Object.SetLifeTime ^ fx, Object.AddFX ^ FX-SpiraleOutFX
+
+[TT-SpiralIn]
+0               = Object.SetScale ^ 0.00001
+1.2             = Object.AddFX ^ FX-SpiraleInFX
