--- a/data/config/Icon.ini
+++ b/data/config/Icon.ini
@@ -1,3 +1,49 @@
+; PILOT SELECT ICONS
+
+[O-PilotSelectIcon@ScrollObject]
+Graphic        = G-PilotSelectIcon
+Scale          = (0.25, 0.25, 1)
+UseParentSpace = both
+
+[G-PilotSelectIcon]
+Texture        = SpaceShooterRedux/Backgrounds/black.png
+Pivot          = center
+
+[O-PilotSelectIcon1@O-PilotSelectIcon]
+ShaderList     = SH-OutlineP1AndP2
+Position       = (-0.375, 0.125, -0.1)
+ChildList      = O-Pilot1IconP1
+
+[O-PilotSelectIcon2@O-PilotSelectIcon]
+Position       = (-0.125, 0.125, -0.1)
+ChildList      = O-Pilot2IconP1
+
+[O-PilotSelectIcon3@O-PilotSelectIcon]
+Position       = (0.125, 0.125, -0.1)
+ChildList      = O-Pilot3IconP1
+
+[O-PilotSelectIcon4@O-PilotSelectIcon]
+Position       = (0.375, 0.125, -0.1)
+ChildList      = O-Pilot4IconP1
+
+[O-PilotSelectIcon5@O-PilotSelectIcon]
+Position       = (-0.375, 0.375, -0.1)
+ChildList      = O-Pilot5IconP1
+
+[O-PilotSelectIcon6@O-PilotSelectIcon]
+Position       = (-0.125, 0.375, -0.1)
+ChildList      = O-Pilot6IconP1
+
+[O-PilotSelectIcon7@O-PilotSelectIcon]
+Position       = (0.125, 0.375, -0.1)
+ChildList      = O-Pilot7IconP1
+
+[O-PilotSelectIcon8@O-PilotSelectIcon]
+Position       = (0.375, 0.375, -0.1)
+ChildList      = O-Pilot8IconP1
+
+; SHIP ICONS
+
 [O-ShipIcon]
 Position             = (0, 0, 0.05)
 Rotation             = 90.0
