Replaced char pointers with strings where possible, added bounciness datum to projectiles, and made strides towards finishing rough draft of pause menu

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -43,7 +43,7 @@ SetList           = MainInput
  
 [MainInput]
 ; Keyboard Inputs
-KEY_ESCAPE        = Quit
+KEY_ESCAPE        = PauseP1
 KEY_W             = UpP1
 KEY_A             = LeftP1
 KEY_S             = DownP1
@@ -55,6 +55,7 @@ KEY_UP            = UpwardP1
 KEY_DOWN          = DownwardP1
 KEY_LEFT          = SuperP1
 ; Gamepad Inputs
+JOY_START_1       = PauseP1
 JOY_UP_1          = UpP1
 JOY_LEFT_1        = LeftP1
 JOY_DOWN_1        = DownP1
@@ -67,6 +68,7 @@ JOY_X_1           = NeutralP1
 JOY_Y_1           = UpwardP1
 JOY_A_1           = DownwardP1
 JOY_B_1           = SuperP1
+JOY_START_2       = PauseP2
 JOY_UP_2          = UpP2
 JOY_LEFT_2        = LeftP2
 JOY_DOWN_2        = DownP2
