--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -1,8 +1,10 @@
 [O-Projectile]
+Pausable = false
 LifeTime          = 5.0
 HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
 UseParentSpace    = position
 ;O-Projectile Class Data
+IsBouncy          = false
 Tethered          = false
 
 [G-Projectile]
@@ -221,6 +223,7 @@ Scale             = (0.5, 0.5, 0.5)
 
 ; O-Orb Class Data
 Speed             = 600
+IsBouncy          = true
 
 [BP-Orb@BP-Projectile]
 Type              = sphere
@@ -423,6 +426,7 @@ LifeTime          = 10.0
 FXList            = FX-Rotate
 ;O-Prism Class Data
 Speed             = 300
+IsBouncy          = true
 RotationSpeed     = 2
 WaveSize          = 5
 
@@ -457,6 +461,7 @@ Flip              = y
 FXList            = FX-Rotate
 ;O-Spacer Class Data
 Speed             = 200
+IsBouncy          = true
 RotationSpeed     = 1.5
 
 [BP-Spacer@BP-Projectile]
@@ -678,6 +683,7 @@ Position          = (0.0, 0.0, 0.1)
 Scale             = (6.0, 6.0)
 ; O-MissileShield Class Data
 Speed             = 200
+IsBouncy          = true
 MaxMissileSpawnInterval = 0.1
 
 [BP-MissileShield@BP-Projectile]
