--- a/data/config/Scene.ini
+++ b/data/config/Scene.ini
@@ -3,6 +3,64 @@ Pivot           = center
 Size            = (1920, 1080, 1)
 TrackList       = TT-StoreScene
 
+; PAUSE MENU
+
+[O-ScenePause@O-Scene]
+Graphic       = G-ScenePause
+Pausable      = false
+ChildList     = O-ContinueText # O-RestartMatchText # O-ExitText # O-QuitText
+
+[G-ScenePause]
+Texture       = SpaceShooterRedux/Backgrounds/darkPurple.png
+
+[O-ScenePauseText@ScrollObject]
+Scale             = (5, 5, 1)
+UseParentSpace    = position
+
+[G-ScenePauseText]
+Pivot             = center
+
+[O-ContinueText@O-ScenePauseText]
+Graphic           = G-ContinueText
+Position          = (0, -.375, -0.1)
+ShaderList        = SH-OutlineText
+
+[G-ContinueText@G-ScenePauseText]
+Text              = T-ContinueText
+
+[T-ContinueText]
+String            = Continue
+
+[O-RestartMatchText@O-ScenePauseText]
+Graphic           = G-RestartMatchText
+Position          = (0, -0.125, -0.1)
+
+[G-RestartMatchText@G-ScenePauseText]
+Text              = T-RestartMatchText
+
+[T-RestartMatchText]
+String            = Restart Match
+
+[O-ExitText@O-ScenePauseText]
+Graphic           = G-ExitText
+Position          = (0, 0.125, -0.1)
+
+[G-ExitText@G-ScenePauseText]
+Text              = T-ExitText
+
+[T-ExitText]
+String            = Exit to Main Menu
+
+[O-QuitText@O-ScenePauseText]
+Graphic           = G-QuitText
+Position          = (0, 0.375, -0.1)
+
+[G-QuitText@G-ScenePauseText]
+Text              = T-QuitText
+
+[T-QuitText]
+String            = Quite to Desktop
+
 ; MAIN MENU
 
 [O-SceneMain@O-Scene]
@@ -268,24 +326,27 @@ String            = 90
 LifeTime        = track
 TrackList       = @
 
+[O-ToScenePause@O-ToScene]
+0               = > Get Runtime Scene, Set Runtime PreviousScene <, > Object.Create O-ScenePause, > Get Runtime PreviousScene, Object.SetOwner < <
+
 [O-ToSceneMain@O-ToScene]
-0               = > Get Runtime O-Scene, Object.Delete <, Object.Create O-SceneMain
+0               = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneMain
 
 [O-ToScenePilotSelect@O-ToScene]
-0               = > Get Runtime O-Scene, Object.Delete <, Object.Create O-ScenePilotSelect
+0               = > Get Runtime Scene, Object.Delete <, Object.Create O-ScenePilotSelect
 
 [O-ToSceneArena@O-ToScene]
-0               = > Get Runtime O-Scene, Object.Delete <, Object.Create O-SceneArena
+0               = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneArena
 
 ;[O-ToSceneMain@O-ToScene]
-;0               = > Get Runtime O-Scene, Object.Delete <, Object.Create O-SceneMain
+;0               = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneMain
 
 ;[O-ToScenePilotSelect@O-ToScene]
-;0               = > Get Runtime O-Scene, Object.AddTrack < TT-MoveOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-MoveIn
+;0               = > Get Runtime Scene, Object.AddTrack < TT-MoveOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-MoveIn
 
 ;[O-ToSceneArena@O-ToScene]
-;0               = Object.Create O-Fade
-;0.5             = > Get Runtime O-Scene, Object.Delete <, > Object.Create O-SceneArena
+;0               = Object.Create Fade
+;0.5             = > Get Runtime Scene, Object.Delete <, > Object.Create O-SceneArena
 
 [O-Fade]
 Group           = fade
@@ -302,15 +363,15 @@ FXList          = @
 SlotList        = FXS-FadeIn # FXS-FadeOut
 
 [O-ToSceneCyan@O-ToScene]
-0               = > Get Runtime O-Scene, Object.AddTrack < TT-SpiralOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-SpiralIn
+0               = > Get Runtime Scene, Object.AddTrack < TT-SpiralOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-SpiralIn
 
 [O-ToSceneBlue@O-ToScene]
-0               = >> Get Runtime O-Scene, Set Runtime Out <, Object.SetPosition < (0, 0, 200) #
+0               = >> Get Runtime Scene, Set Runtime Out <, Object.SetPosition < (0, 0, 200) #
                   >  Object.Create O-ScenePilotSelect, Object.SetPosition < (0, 0, 100) #
                   >  Viewport.Get MainViewport, Viewport.Delete <, Viewport.Create V-ViewportIn, Viewport.Create V-ViewportOut, Viewport.Create MainViewport #
                   >  Object.Create O-SceneDissolve, Object.SetOwner < ^
 0.8             = >  Viewport.Get V-ViewportIn, Viewport.Delete <, > Viewport.Get V-ViewportOut, Viewport.Delete < #
-                  >  Get Runtime Out, Object.Delete <, > Get Runtime O-Scene, Object.SetPosition < (0, 0, 0)
+                  >  Get Runtime Out, Object.Delete <, > Get Runtime Scene, Object.SetPosition < (0, 0, 0)
 
 [O-SceneDissolve]
 Graphic         = @
