--- a/data/config/TimelineTrack.ini
+++ b/data/config/TimelineTrack.ini
@@ -10,7 +10,7 @@
 ; Scene Tracks
 
 [TT-StoreScene]
-0               = Set Runtime O-Scene ^
+0               = Set Runtime Scene ^
 
 [TT-MoveOut]
 0               = Object.SetLifeTime ^ fx, Object.AddFX ^ FX-ScrollLeft
