--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -39,6 +39,7 @@ Position          = (-512, 350, 0)
 ShaderList        = SH-OutlineP1
 
 ;Class Data
+PauseInput        = PauseP1
 UpInput           = UpP1
 LeftInput         = LeftP1
 DownInput         = DownP1
@@ -61,6 +62,7 @@ Flip              = x
 ShaderList        = SH-OutlineP2
 
 ;Class Data
+PauseInput        = PauseP2
 UpInput           = UpP2
 LeftInput         = LeftP2
 DownInput         = DownP2
@@ -128,6 +130,7 @@ ChildList            = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP1
 UpInput           = @O-PilotP1
 LeftInput         = @O-PilotP1
 DownInput         = @O-PilotP1
@@ -157,6 +160,7 @@ ChildList            = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP2
 UpInput           = @O-PilotP2
 LeftInput         = @O-PilotP2
 DownInput         = @O-PilotP2
@@ -227,6 +231,7 @@ ChildList            = O-Ship2P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP1
 UpInput           = @O-PilotP1
 LeftInput         = @O-PilotP1
 DownInput         = @O-PilotP1
@@ -256,6 +261,7 @@ ChildList            = O-Ship2P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP2
 UpInput           = @O-PilotP2
 LeftInput         = @O-PilotP2
 DownInput         = @O-PilotP2
@@ -326,6 +332,7 @@ ChildList            = O-Ship3P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP1
 UpInput           = @O-PilotP1
 LeftInput         = @O-PilotP1
 DownInput         = @O-PilotP1
@@ -355,6 +362,7 @@ ChildList            = O-Ship3P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP2
 UpInput           = @O-PilotP2
 LeftInput         = @O-PilotP2
 DownInput         = @O-PilotP2
@@ -425,6 +433,7 @@ ChildList            = O-Ship4P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP1
 UpInput           = @O-PilotP1
 LeftInput         = @O-PilotP1
 DownInput         = @O-PilotP1
@@ -454,6 +463,7 @@ ChildList            = O-Ship4P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP2
 UpInput           = @O-PilotP2
 LeftInput         = @O-PilotP2
 DownInput         = @O-PilotP2
@@ -525,6 +535,7 @@ ChildList            = O-Ship5P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP1
 UpInput           = @O-PilotP1
 LeftInput         = @O-PilotP1
 DownInput         = @O-PilotP1
@@ -554,6 +565,7 @@ ChildList            = O-Ship5P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP2
 UpInput           = @O-PilotP2
 LeftInput         = @O-PilotP2
 DownInput         = @O-PilotP2
@@ -625,6 +637,7 @@ ChildList            = O-Ship6P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP1
 UpInput           = @O-PilotP1
 LeftInput         = @O-PilotP1
 DownInput         = @O-PilotP1
@@ -654,6 +667,7 @@ ChildList            = O-Ship6P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP2
 UpInput           = @O-PilotP2
 LeftInput         = @O-PilotP2
 DownInput         = @O-PilotP2
@@ -724,6 +738,7 @@ ChildList            = O-Ship7P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP1
 UpInput           = @O-PilotP1
 LeftInput         = @O-PilotP1
 DownInput         = @O-PilotP1
@@ -753,6 +768,7 @@ ChildList            = O-Ship7P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP2
 UpInput           = @O-PilotP2
 LeftInput         = @O-PilotP2
 DownInput         = @O-PilotP2
@@ -823,6 +839,7 @@ ChildList            = O-Ship8P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP1
 UpInput           = @O-PilotP1
 LeftInput         = @O-PilotP1
 DownInput         = @O-PilotP1
@@ -852,6 +869,7 @@ ChildList            = O-Ship8P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList       = J-Weld
 
 ;Class Data
+PauseInput        = @O-PilotP2
 UpInput           = @O-PilotP2
 LeftInput         = @O-PilotP2
 DownInput         = @O-PilotP2
