Got pause scene working

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -98,3 +98,6 @@ Type		= weld
 ParentAnchor	= (0, 0, 0)
 ChildAnchor	= (0, 0, 0)
 Collide		= false
+
+[GUID]
+Empty             = 00000000-0000-0000-0000-000000000000
