--- a/data/config/Scene.ini
+++ b/data/config/Scene.ini
@@ -59,7 +59,7 @@ Position          = (0, 0.375, -0.1)
 Text              = T-QuitText
 
 [T-QuitText]
-String            = Quite to Desktop
+String            = Quit to Desktop
 
 ; MAIN MENU
 
@@ -337,6 +337,11 @@ TrackList       = @
 
 [O-ToSceneArena@O-ToScene]
 0               = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneArena
+
+[O-ToSceneArenaFromPause@O-ToScene]
+0               = > Get GUID Empty, > Get Runtime PreviousScene, Object.SetOwner < <, #
+                  > Get Runtime Scene, Object.Delete <, #
+				  >> Get Runtime PreviousScene, Object.RemoveTrack < TT-StoreScene, Object.AddTrack < TT-StoreScene
 
 ;[O-ToSceneMain@O-ToScene]
 ;0               = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneMain
