--- a/data/config/Crosshairs.ini
+++ b/data/config/Crosshairs.ini
@@ -1,5 +1,6 @@
 [O-Crosshairs]
-Position          = (0.0, 0.0, -0.1)
+Group             = effect
+Position          = (0, 0, 0)
 LifeTime          = 10.0
 ; O-Crosshairs Class Data
 Speed             = 400
