--- a/data/config/Geometry.ini
+++ b/data/config/Geometry.ini
@@ -6,6 +6,7 @@ MaxEmberTime           = 10.0
 EmberCreationRate      = 0.1
 
 [O-Wall]
+Group             = geometry
 Graphic           = G-Wall
 Body              = B-Wall
 ChildList         = O-ElectricityIconP1 # O-ElectricityIconP2
