--- a/data/config/Icon.ini
+++ b/data/config/Icon.ini
@@ -1,6 +1,45 @@
-; PILOT SELECT ICONS
+; PILOT ICONS
+
+[O-PilotIcon]
+Group                = icon
+Position             = (0, 0, -1)
+UseParentSpace       = position
+IgnoreFromParent     = scale
+
+[O-Pilot1IconP1@O-PilotIcon]
+Graphic              = G-Pilot1
+ChildList            = O-Ship1IconP1
+
+[O-Pilot2IconP1@O-PilotIcon]
+Graphic              = G-Pilot2
+ChildList            = O-Ship2IconP1
+
+[O-Pilot3IconP1@O-PilotIcon]
+Graphic              = G-Pilot3
+ChildList            = O-Ship3IconP1
+
+[O-Pilot4IconP1@O-PilotIcon]
+Graphic              = G-Pilot4
+ChildList            = O-Ship4IconP1
+
+[O-Pilot5IconP1@O-PilotIcon]
+Graphic              = G-Pilot5
+ChildList            = O-Ship5IconP1
+
+[O-Pilot6IconP1@O-PilotIcon]
+Graphic              = G-Pilot6
+ChildList            = O-Ship6IconP1
+
+[O-Pilot7IconP1@O-PilotIcon]
+Graphic              = G-Pilot7
+ChildList            = O-Ship7IconP1
+
+[O-Pilot8IconP1@O-PilotIcon]
+Graphic              = G-Pilot8
+ChildList            = O-Ship8IconP1
 
 [O-PilotSelectIcon@ScrollObject]
+Group          = icon
 Graphic        = G-PilotSelectIcon
 Scale          = (0.25, 0.25, 1)
 UseParentSpace = both
@@ -45,7 +84,8 @@ ChildList      = O-Pilot8IconP1
 ; SHIP ICONS
 
 [O-ShipIcon]
-Position             = (0, 0, 0.05)
+Group                = icon
+Position             = (0, 0, 1)
 Rotation             = 90.0
 UseParentSpace       = position
 IgnoreFromParent     = scale
@@ -75,7 +115,8 @@ Graphic              = G-Ship7
 Graphic              = G-Ship8
 
 [O-ElectricityIcon@ScrollObject]
-Position             = (0, 0, -0.25)
+Group                = icon
+Position             = (0, 0, 0)
 
 [G-ElectricityIcon]
 Pivot                = center
