--- a/data/config/LaserPortal.ini
+++ b/data/config/LaserPortal.ini
@@ -1,4 +1,6 @@
 [O-LaserPortal@ScrollObject]
+Group             = effect
+Position          = (0, 0, 0.33)
 LifeTime          = 5.0
 
 [G-LaserPortal]
