--- a/data/config/Partition.ini
+++ b/data/config/Partition.ini
@@ -1,6 +1,7 @@
 [O-Partition@ScrollObject]
+Group             = geometry
 Graphic           = G-Partition
-Position          = (0.0, 540.0, 0.0)
+Position          = (0, 540, 1)
 Body              = B-Partition
 Scale             = (1.0, 16.5789473684, 1.0)
 
