--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -1,4 +1,5 @@
 [O-Pilot]
+Group             = pilot
 HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
 AnimationSet      = AS-Pilot
 ;O-Pilot Class Data
@@ -934,45 +935,6 @@ Pivot             = center
 [T-HeadsUpText]
 String            = 10
 
-; Icons
-
-[O-PilotIcon]
-Position             = (0, 0, -0.1)
-UseParentSpace       = position
-IgnoreFromParent     = scale
-
-[O-Pilot1IconP1@O-PilotIcon]
-Graphic              = G-Pilot1
-ChildList            = O-Ship1IconP1
-
-[O-Pilot2IconP1@O-PilotIcon]
-Graphic              = G-Pilot2
-ChildList            = O-Ship2IconP1
-
-[O-Pilot3IconP1@O-PilotIcon]
-Graphic              = G-Pilot3
-ChildList            = O-Ship3IconP1
-
-[O-Pilot4IconP1@O-PilotIcon]
-Graphic              = G-Pilot4
-ChildList            = O-Ship4IconP1
-
-[O-Pilot5IconP1@O-PilotIcon]
-Graphic              = G-Pilot5
-ChildList            = O-Ship5IconP1
-
-[O-Pilot6IconP1@O-PilotIcon]
-Graphic              = G-Pilot6
-ChildList            = O-Ship6IconP1
-
-[O-Pilot7IconP1@O-PilotIcon]
-Graphic              = G-Pilot7
-ChildList            = O-Ship7IconP1
-
-[O-Pilot8IconP1@O-PilotIcon]
-Graphic              = G-Pilot8
-ChildList            = O-Ship8IconP1
-
 ; Temporary melee and parry fx items until I finalize animations.
 
 [FX-Melee]
@@ -1006,8 +968,9 @@ EndValue          = (0, 0, 255) ; blue
 ; Temporary melee and parry objects until I finalize animations
 
 [O-Melee@ScrollObject]
+Group             = effect
 Graphic           = G-Melee
-Position          = (0, 0, -0.5)
+Position          = (0, 0, 1)
 Scale             = (0.5, 0.5, 1)
 UseParentSpace    = position
 FXList            = FX-Melee
@@ -1017,8 +980,9 @@ Texture           = SpaceShooterRedux/PNG/Damage/playerShip1_damage3.png
 Pivot             = center
 
 [O-Parry@ScrollObject]
+Group             = effect
 Graphic           = G-Parry
-Position          = (0, 0, -0.5)
+Position          = (0, 0, 0.66)
 Scale             = (0.5, 0.5, 1)
 UseParentSpace    = position
 FXList            = FX-Parry
