--- a/data/config/Scene.ini
+++ b/data/config/Scene.ini
@@ -1,6 +1,6 @@
 [O-Scene]
 Pivot           = center
-Size            = (1920, 1080, 1)
+Size            = (1920, 1080, 0.1)
 TrackList       = TT-StoreScene
 
 ; PAUSE MENU
@@ -13,7 +13,7 @@ ChildList     = O-ContinueText # O-RestartMatchText # O-ExitText # O-QuitText
 [G-ScenePause]
 Texture       = SpaceShooterRedux/Backgrounds/darkPurple.png
 
-[O-ScenePauseText@ScrollObject]
+[O-ScenePauseText@O-Text]
 Scale             = (5, 5, 1)
 UseParentSpace    = position
 
@@ -22,7 +22,7 @@ Pivot             = center
 
 [O-ContinueText@O-ScenePauseText]
 Graphic           = G-ContinueText
-Position          = (0, -.375, -0.1)
+Position          = (0, -0.375, 1)
 ShaderList        = SH-OutlineText
 
 [G-ContinueText@G-ScenePauseText]
@@ -33,7 +33,7 @@ String            = Continue
 
 [O-RestartMatchText@O-ScenePauseText]
 Graphic           = G-RestartMatchText
-Position          = (0, -0.125, -0.1)
+Position          = (0, -0.125, 1)
 
 [G-RestartMatchText@G-ScenePauseText]
 Text              = T-RestartMatchText
@@ -43,7 +43,7 @@ String            = Restart Match
 
 [O-ExitText@O-ScenePauseText]
 Graphic           = G-ExitText
-Position          = (0, 0.125, -0.1)
+Position          = (0, 0.125, 1)
 
 [G-ExitText@G-ScenePauseText]
 Text              = T-ExitText
@@ -53,7 +53,7 @@ String            = Exit to Main Menu
 
 [O-QuitText@O-ScenePauseText]
 Graphic           = G-QuitText
-Position          = (0, 0.375, -0.1)
+Position          = (0, 0.375, 1)
 
 [G-QuitText@G-ScenePauseText]
 Text              = T-QuitText
@@ -70,7 +70,7 @@ ChildList     = O-ArcadeText # O-VersusText # O-OnlinePlayText # O-TrainingText 
 [G-SceneMain]
 Texture       = SpaceShooterRedux/Backgrounds/darkPurple.png
 
-[O-SceneMainText@ScrollObject]
+[O-SceneMainText@O-Text]
 Scale             = (5, 5, 1)
 UseParentSpace    = position
 
@@ -79,7 +79,7 @@ Pivot             = left
 
 [O-ArcadeText@O-SceneMainText]
 Graphic           = G-ArcadeText
-Position          = (-0.45, 0.05, -0.1)
+Position          = (-0.45, 0.05, 1)
 ShaderList        = SH-OutlineText
 
 [G-ArcadeText@G-SceneMainText]
@@ -90,7 +90,7 @@ String            = Arcade
 
 [O-VersusText@O-SceneMainText]
 Graphic           = G-VersusText
-Position          = (-0.45, 0.15, -0.1)
+Position          = (-0.45, 0.15, 1)
 
 [G-VersusText@G-SceneMainText]
 Text              = T-VersusText
@@ -100,7 +100,7 @@ String            = VS
 
 [O-OnlinePlayText@O-SceneMainText]
 Graphic           = G-OnlinePlayText
-Position          = (-0.45, 0.25, -0.1)
+Position          = (-0.45, 0.25, 1)
 
 [G-OnlinePlayText@G-SceneMainText]
 Text              = T-OnlinePlayText
@@ -110,7 +110,7 @@ String            = Online Play
 
 [O-TrainingText@O-SceneMainText]
 Graphic           = G-TrainingText
-Position          = (-0.45, 0.35, -0.1)
+Position          = (-0.45, 0.35, 1)
 
 [G-TrainingText@G-SceneMainText]
 Text              = T-TrainingText
@@ -120,7 +120,7 @@ String            = Training
 
 [O-SettingsText@O-SceneMainText]
 Graphic           = G-SettingsText
-Position          = (-0.45, 0.45, -0.1)
+Position          = (-0.45, 0.45, 1)
 
 [G-SettingsText@G-SceneMainText]
 Text              = T-SettingsText
@@ -145,7 +145,9 @@ ChildList     = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-Lives
 PilotP1       = O-Pilot1P1
 PilotP2       = O-Pilot1P2
 
-[O-DashMeter@O-UI]
+[O-Meter@O-UI]
+
+[O-DashMeter@O-Meter]
 Scale             = (0.072, 0.0375, 1.0)
 
 [G-DashMeter]
@@ -153,19 +155,19 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-DashMeterP1@O-DashMeter]
 Graphic           = G-DashMeterP1
-Position          = (-0.05, -0.475, 1.0)
+Position          = (-0.05, -0.475, 0.66)
 
 [G-DashMeterP1@G-DashMeter]
 Pivot             = right
 
 [O-DashMeterP2@O-DashMeter]
 Graphic           = G-DashMeterP2
-Position          = (0.05, -0.475, 1.0)
+Position          = (0.05, -0.475, 0.66)
 
 [G-DashMeterP2@G-DashMeter]
 Pivot             = left
 
-[O-ParryMeter@O-UI]
+[O-ParryMeter@O-Meter]
 Scale             = (0.072, 0.0375, 1.0)
 
 [G-ParryMeter]
@@ -173,19 +175,19 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-ParryMeterP1@O-ParryMeter]
 Graphic           = G-ParryMeterP1
-Position          = (-0.1445, -0.475, 1.0)
+Position          = (-0.1445, -0.475, 0.66)
 
 [G-ParryMeterP1@G-ParryMeter]
 Pivot             = right
 
 [O-ParryMeterP2@O-ParryMeter]
 Graphic           = G-ParryMeterP2
-Position          = (0.1445, -0.475, 1.0)
+Position          = (0.1445, -0.475, 0.66)
 
 [G-ParryMeterP2@G-ParryMeter]
 Pivot             = left
 
-[O-LivesMeter@O-UI]
+[O-LivesMeter@O-Meter]
 Scale             = (0.072, 0.025, 1.0)
 
 [G-LivesMeter]
@@ -193,19 +195,19 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonRed.png
 
 [O-LivesMeterP1@O-LivesMeter]
 Graphic           = G-LivesMeterP1
-Position          = (-0.05, -0.39375, 1.0)
+Position          = (-0.05, -0.39375, 0.66)
 
 [G-LivesMeterP1@G-LivesMeter]
 Pivot             = right
 
 [O-LivesMeterP2@O-LivesMeter]
 Graphic           = G-LivesMeterP2
-Position          = (0.05, -0.39375, 1.0)
+Position          = (0.05, -0.39375, 0.66)
 
 [G-LivesMeterP2@G-LivesMeter]
 Pivot             = left
 
-[O-NeutralMeter@O-UI]
+[O-NeutralMeter@O-Meter]
 Scale             = (0.072, 0.0375, 1.0)
 
 [G-NeutralMeter]
@@ -213,19 +215,19 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-NeutralMeterP1@O-NeutralMeter]
 Graphic           = G-NeutralMeterP1
-Position          = (-0.239, -0.475, 1.0)
+Position          = (-0.239, -0.475, 0.66)
 
 [G-NeutralMeterP1@G-NeutralMeter]
 Pivot             = right
 
 [O-NeutralMeterP2@O-NeutralMeter]
 Graphic           = G-NeutralMeterP2
-Position          = (0.239, -0.475, 1.0)
+Position          = (0.239, -0.475, 0.66)
 
 [G-NeutralMeterP2@G-NeutralMeter]
 Pivot             = left
 
-[O-UpwardMeter@O-UI]
+[O-UpwardMeter@O-Meter]
 Scale             = (0.072, 0.0375, 1.0)
 
 [G-UpwardMeter]
@@ -233,19 +235,19 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-UpwardMeterP1@O-UpwardMeter]
 Graphic           = G-UpwardMeterP1
-Position          = (-0.3335, -0.475, 1.0)
+Position          = (-0.3335, -0.475, 0.66)
 
 [G-UpwardMeterP1@G-UpwardMeter]
 Pivot             = right
 
 [O-UpwardMeterP2@O-UpwardMeter]
 Graphic           = G-UpwardMeterP2
-Position          = (0.3335, -0.475, 1.0)
+Position          = (0.3335, -0.475, 0.66)
 
 [G-UpwardMeterP2@G-UpwardMeter]
 Pivot             = left
 
-[O-DownwardMeter@O-UI]
+[O-DownwardMeter@O-Meter]
 Scale             = (0.072, 0.0375, 1.0)
 
 [G-DownwardMeter]
@@ -253,19 +255,19 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-DownwardMeterP1@O-DownwardMeter]
 Graphic           = G-DownwardMeterP1
-Position          = (-0.428, -0.475, 1.0)
+Position          = (-0.428, -0.475, 0.66)
 
 [G-DownwardMeterP1@G-DownwardMeter]
 Pivot             = right
 
 [O-DownwardMeterP2@O-DownwardMeter]
 Graphic           = G-DownwardMeterP2
-Position          = (0.428, -0.475, 1.0)
+Position          = (0.428, -0.475, 0.66)
 
 [G-DownwardMeterP2@G-DownwardMeter]
 Pivot             = left
 
-[O-SuperMeter@O-UI]
+[O-SuperMeter@O-Meter]
 Scale             = (0.45, 0.0375, 1.0)
 
 [G-SuperMeter]
@@ -273,19 +275,22 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonYellow.png
 
 [O-SuperMeterP1@O-SuperMeter]
 Graphic           = G-SuperMeterP1
-Position          = (-0.05, -0.43125, 1.0)
+Position          = (-0.05, -0.43125, 0.66)
 
 [G-SuperMeterP1@G-SuperMeter]
 Pivot             = right
 
 [O-SuperMeterP2@O-SuperMeter]
 Graphic           = G-SuperMeterP2
-Position          = (0.05, -0.43125, 1.0)
+Position          = (0.05, -0.43125, 0.66)
 
 [G-SuperMeterP2@G-SuperMeter]
 Pivot             = left
 
-[O-ClipBorder@O-UI]
+[O-MeterBorder@O-UI]
+Position          = (0, 0, 0.33)
+
+[O-ClipBorder@O-MeterBorder]
 Graphic           = G-ClipBorder
 Scale             = (0.002, 0.0375, 1.0)
 
@@ -308,9 +313,9 @@ Pivot             = bottom
 [O-ClipBorderRight@O-ClipBorder]
 Pivot             = right
 
-[O-TimerText@O-UI]
+[O-TimerText@O-Text]
 Graphic           = G-TimerText
-Position          = (0, -0.4375, 0)
+Position          = (0, -0.4375, 1)
 Scale             = (0.08, 0.08, 0.08)
 
 [G-TimerText]
@@ -327,7 +332,8 @@ LifeTime        = track
 TrackList       = @
 
 [O-ToScenePause@O-ToScene]
-0               = > Get Runtime Scene, Set Runtime PreviousScene <, > Object.Create O-ScenePause, > Get Runtime PreviousScene, Object.SetOwner < <
+0               = >> Get Runtime Scene, Set Runtime PreviousScene <, Object.SetPosition < (0, 0, 100) #
+				  > Object.Create O-ScenePause, > Get Runtime PreviousScene, Object.SetOwner < <
 
 [O-ToSceneMain@O-ToScene]
 0               = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneMain
@@ -339,8 +345,8 @@ TrackList       = @
 0               = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneArena
 
 [O-ToSceneArenaFromPause@O-ToScene]
-0               = > Get GUID Empty, > Get Runtime PreviousScene, Object.SetOwner < <, #
-                  > Get Runtime Scene, Object.Delete <, #
+0               = > Get GUID Empty, >> Get Runtime PreviousScene, Object.SetPosition < (0, 0, 0), Object.SetOwner < < #
+                  > Get Runtime Scene, Object.Delete < #
 				  >> Get Runtime PreviousScene, Object.RemoveTrack < TT-StoreScene, Object.AddTrack < TT-StoreScene
 
 ;[O-ToSceneMain@O-ToScene]
@@ -354,7 +360,7 @@ TrackList       = @
 ;0.5             = > Get Runtime Scene, Object.Delete <, > Object.Create O-SceneArena
 
 [O-Fade]
-Group           = fade
+Group           = ui
 LifeTime        = fx
 ParentCamera    = MainCamera
 Scale           = 1
