--- a/data/config/UI.ini
+++ b/data/config/UI.ini
@@ -1,2 +1,6 @@
 [O-UI@ScrollObject]
+Group             = ui
 ParentCamera      = MainCamera ; Set MainCamera to be the parent of the UI element, thus binding them, and handling the latter in terms of camera space.
+
+[O-Text@ScrollObject]
+Group             = ui
