--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -88,8 +88,57 @@ Camera            = MainCamera
 [MainCamera]
 FrustumWidth      = 1920
 FrustumHeight     = 1080
-FrustumFar        = 1.0
-GroupList         = default # fade ; Groups (of objects) will be rendered in the order of declaration. Up to 16 groups can be associated with a camera. Defaults to "default" group.
+FrustumFar        = 2.0 ; Using 2.0 and -2.0 for FrustumFar and FrustumNear to give myself a substantial margin on either side when operating between 1.0 and -1.0.
+FrustumNear       = -2.0 ; Using 2.0 and -2.0 for FrustumFar and FrustumNear to give myself a substantial margin on either side when operating between 1.0 and -1.0.
+GroupList         = default # geometry # icon # projectileLarge # ship # pilot # projectileTethered # projectileMedium # projectileSmall # effect # ui
+
+;This section is purely for organization purposes, and is never referenced in code.
+[DrawOrder]
+RearToFront       = GEOMETRY #
+						O-Partition # 1 #
+						O-Wall # 0 #
+					ICON #
+						O-PilotSelectIcon # 1 #
+						O-ShipIcon # 1 # parentSpace #
+						O-PilotIcon # -1 # parentSpace #
+						O-ElectricityIcon # 0 #
+					PROJECTILELARGE #
+						O-MissileShield # 1 #
+						O-Explosion # 0 #
+					SHIP #
+						O-Ship # 0 #
+					PILOT #
+						O-Pilot # 0 #
+					PROJECTILETETHERED #
+						O-Beam # 1 #
+						O-Puppet # 0 #
+					PROJECTILEMEDIUM #
+						O-LaserWall # 1 #
+						O-Spacer # 0.5 #
+						O-Prism # 0 #
+					PROJECTILESMALL #
+						O-Shockwave # 1 #
+						O-Familiar # 0.9 #
+						O-Orb # 0.81 #
+						O-MedussaHead # 0.72 #
+						O-Grenade # 0.63 #
+						O-Missile # 0.54 #
+						O-Turret # 0.45 #
+						O-LaserGate # 0.36 #
+						O-Ember # 0.27 #
+						O-Laser # 0.18 #
+						O-LaserHeatseeking # 0.09 #
+						O-Shrapnel # 0 #
+					EFFECT #
+						O-Melee # 1 #
+						O-Parry # 0.66 #
+						O-LaserPortal # 0.33 #
+						O-Crosshairs # 0 #
+					UI #
+						O-Text # 1 #
+						O-Meter # 0.66 #
+						O-MeterBorder # 0.33 #
+						O-Fade # 0
 
 ; Joints
 
@@ -98,6 +147,8 @@ Type		= weld
 ParentAnchor	= (0, 0, 0)
 ChildAnchor	= (0, 0, 0)
 Collide		= false
+
+; GUID Constants
 
 [GUID]
 Empty             = 00000000-0000-0000-0000-000000000000
