--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -1,7 +1,7 @@
 [O-Projectile]
 LifeTime          = 5.0
 HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
-UseParentSpace    = position
+;UseParentSpace    = position
 ;O-Projectile Class Data
 IsBouncy          = false
 Tethered          = false
@@ -18,6 +18,8 @@ CustomGravity     = (0.0, 0.0, 0.0)
 Solid             = false
 
 [O-Laser@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 0.18)
 ; O-Laser Class Data
 Speed             = 1000
 
@@ -108,6 +110,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # space # pilotP1
 
 [O-LaserHeatseeking@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 0.09)
 ; O-LaserHeatseeking Class Data
 Speed             = 1000
 
@@ -143,6 +147,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-LaserWall@O-Projectile]
+Group             = projectileMedium
+Position          = (0, 0, 1)
 Rotation          = 90.0
 ;O-LaserWall Class Data
 Speed             = 450
@@ -180,6 +186,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-LaserGate@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 0.36)
 Scale             = (0.5, 0.5, 1.0)
 ;O-LaserGate Class Data
 Speed             = 600.0
@@ -218,8 +226,9 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Orb@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 0.81)
 Scale             = (0.5, 0.5, 0.5)
-
 ; O-Orb Class Data
 Speed             = 600
 IsBouncy          = true
@@ -257,6 +266,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-MedussaHead@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 0.72)
 Rotation          = -135.0 ; default rotation of -135 so as to facilitate use of sinusoidal FX without jittering resulting from a start value other than 0
 LifeTime          = 10.0
 FXList            = FX-RotateQuad
@@ -299,6 +310,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Missile@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 0.54)
 LifeTime          = 10.0
 ; O-Missile Class Data
 Speed             = 1000
@@ -338,6 +351,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Grenade@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 0.63)
 Scale             = (1.5, 1.5)
 Rotation          = 0~359
 FXList            = FX-Rotate
@@ -382,6 +397,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Turret@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 0.45)
 Scale             = (0.5, 0.5, 1.0)
 ;O-Turret Class Data
 Speed             = 800
@@ -420,6 +437,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Prism@O-Projectile]
+Group             = projectileMedium
+Position          = (0, 0, 0)
 Scale             = (0.5, 0.5)
 LifeTime          = 10.0
 FXList            = FX-Rotate
@@ -453,7 +472,19 @@ Graphic           = G-PrismP2
 Body              = B-PrismP2
 ChildList         = O-PrismGunP2
 
+[G-PrismP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Meteors/meteorBrown_big4.png
+
+[B-PrismP2@B-Projectile]
+PartList          = BP-PrismP2
+
+[BP-PrismP2@BP-Prism]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1 # projectileP2
+
 [O-Spacer@O-Projectile]
+Group             = projectileMedium
+Position          = (0, 0, 0.5)
 Scale             = (4.0, 2.0)
 LifeTime          = 20.0
 Flip              = y
@@ -497,17 +528,9 @@ PartList          = BP-SpacerP2
 SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
-[G-PrismP2@G-Projectile]
-Texture           = SpaceShooterRedux/PNG/Meteors/meteorBrown_big4.png
-
-[B-PrismP2@B-Projectile]
-PartList          = BP-PrismP2
-
-[BP-PrismP2@BP-Prism]
-SelfFlags         = projectileP2
-CheckMask         = geometry # pilotP1 # projectileP2
-
 [O-Beam@O-Projectile]
+Group             = projectileTethered
+Position          = (0, 0, 1)
 Scale             = (2.0, 48.0, 1.0)
 LifeTime          = 0.5
 ;O-Beam Class Data
@@ -553,7 +576,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Familiar@O-Projectile]
-Position          = (0, 0, -0.2)
+Group             = projectileSmall
+Position          = (0, 0, 0.9)
 Rotation          = -90
 LifeTime          = -1.0
 ;O-Familiar Class Data
@@ -595,6 +619,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Puppet@O-Projectile]
+Group             = projectileTethered
+Position          = (0, 0, 0)
 Scale             = (2.0, 5.0, 1.0)
 Rotation          = 180
 LifeTime          = 0.5
@@ -636,6 +662,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Shrapnel@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 0)
 Scale             = (0.25, 0.25)
 Rotation          = 0.0~360.0
 LifeTime          = 5.0
@@ -678,7 +706,8 @@ SelfFlags         = projectileP2
 CheckMask         = pilotP1
 
 [O-MissileShield@O-Projectile]
-Position          = (0.0, 0.0, 0.1)
+Group             = projectileLarge
+Position          = (0, 0, 1)
 Scale             = (6.0, 6.0)
 ; O-MissileShield Class Data
 Speed             = 200
@@ -717,6 +746,8 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # space # pilotP1
 
 [O-Explosion@O-Projectile]
+Group             = projectileLarge
+Position          = (0, 0, 0)
 LifeTime          = 2.0
 ;O-Explosion Class Data
 Speed             = 0
@@ -754,6 +785,8 @@ SelfFlags         = projectileP2
 CheckMask         = pilotP1
 
 [O-Ember@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 0.27)
 LifeTime          = 20.0
 ;O-Ember Class Data
 Speed             = 0
@@ -796,6 +829,8 @@ SelfFlags         = projectileP2
 CheckMask         = pilotP1
 
 [O-Shockwave@O-Projectile]
+Group             = projectileSmall
+Position          = (0, 0, 1)
 LifeTime          = 0.25
 ;O-Shockwave Class Data
 Speed             = 200
